[package]
name = "mqttsn-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-net = "0.6.0"
format_no_std = "1.0.0"
nrf-modem = {version = "0.2.1", features = ["defmt"]}
heapless = "0.8.0"
# tokio = { version = "1.26.0", features = ["full"] }
mqtt-sn = { version = "0.2.2", path="../rust-mqtt-sn" }
bimap = { version = "0.6.3", default-features = false }
byte = "0.2.6"
embassy-sync = "0.1.0"
# tokio-dtls-stream-sink = { version = "0.6.0", path="../tokio-dtls-stream-sink" }
# openssl = "0.10.47"
# openssl-errors = "0.2.0"
# log = "0.4.17"
# futures = "0.3.27"
# serde_yaml = "0.9.19"
# hex = "0.4.3"
# cstr = "0.2.11"
# env_logger = "0.10.0"
defmt = "0.3"

[features]
no_std = []
