[package]
name = "mqttsn-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-net = "0.6.0"
format_no_std = "1.0.0"
nrf-modem = {version = "0.2.1", features = ["defmt"]}
heapless = "0.8.0"
mqtt-sn = { version = "0.2.2", path="rust-mqtt-sn" }
# bimap = { version = "0.6.3", default-features = false }
byte = "0.2.6"
embassy-sync = "0.1.0"
embassy-futures = "0.1.1"
embassy-time = "0.1.5"

defmt = { version = "0.3", optional = true }

tokio = { version = "1.26.0", features = ["full"], optional = true }
tokio-dtls-stream-sink = { version = "0.6.0", path="tokio-dtls-stream-sink", optional = true }
openssl = { version = "0.10.47", optional = true }
log = { version = "0.4.17", optional = true }
serde_yaml = { version = "0.9.19", optional = true }
env_logger = { version = "0.10.0", optional = true }
openssl-errors = { version = "0.2.0", optional = true }
futures = { version = "0.3.27", optional = true }
hex = { version = "0.4.3", optional = true }
cstr = { version = "0.2.11", optional = true }


[features]
std = ["tokio", "tokio-dtls-stream-sink", "openssl", "log", "serde_yaml",
        "env_logger", "openssl-errors", "futures", "hex", "cstr"]
no_std = ["defmt"]
default = ["no_std"]

[[bin]]
name = "mqttsn_client"
path = "src/main.rs"
required-features = ["std"]
