[package]
name = "mqttsn-client"
version = "0.1.0"
edition = "2021"

[dependencies]
no-std-net = "0.6.0"
format_no_std = "1.0.0"

heapless = "0.8.0"
mqtt-sn = { version = "0.2.2", git="https://github.com/tyr84/rust-mqtt-sn.git" }
byte = "0.2.6"
embassy-sync = "0.5"
embassy-time = "0.3"
embassy-futures = "0.1.1"

nrf-modem = {version = "0.4", features = ["defmt"], optional = true}
defmt = { version = "0.3", optional = true }

tokio = { version = "1.26.0", features = ["full"], optional = true }
tokio-dtls-stream-sink = { version = "0.6.0", git="https://github.com/drogue-iot/tokio-dtls-stream-sink.git", optional = true }
openssl = { version = "0.10.47", optional = true }
log = { version = "0.4.17", optional = true }
serde_yaml = { version = "0.9.19", optional = true }
env_logger = { version = "0.10.0", optional = true }
openssl-errors = { version = "0.2.0", optional = true }
futures = { version = "0.3.27", optional = true }
hex = { version = "0.4.3", optional = true }
cstr = { version = "0.2.11", optional = true }


[features]
std = ["tokio", "tokio-dtls-stream-sink", "openssl", "log", "serde_yaml",
        "env_logger", "openssl-errors", "futures", "hex", "cstr", 
        "embassy-time/std", "embassy-time/generic-queue"]
no_std = ["defmt", "nrf-modem"]
default = ["no_std"]

[[bin]]
name = "mqttsn_client"
path = "src/main.rs"
required-features = ["std"]
